Flat slides layout.

--- a/slides/ddd-toolkit.pug
+++ b/slides/ddd-toolkit.pug
@@ -145,7 +145,7 @@ html
                 user = #{"<"}User: 3292#{">"} # Story argument
                 category = #{"<"}Category: 1318#{">"}
                   # Set by Subscription.find_category
-        section(data-background-image=require("../introducing-dry-python/pics/debug-toolbar.png") data-background-size="contain")
+        section(data-background-image=require("./pics/debug-toolbar.png") data-background-size="contain")
           h2 DEBUG TOOLBAR
           br
           br
@@ -157,9 +157,9 @@ html
           br
           br
           br
-        section(data-background-image=require("../introducing-dry-python/pics/pytest.png") data-background-size="contain")
+        section(data-background-image=require("./pics/pytest.png") data-background-size="contain")
           h2(style="color: white") py.test
-        section(data-background-image=require("../introducing-dry-python/pics/sentry.png") data-background-size="contain")
+        section(data-background-image=require("./pics/sentry.png") data-background-size="contain")
           h2 Sentry
         section(data-background-image=require("./pics/elk-logs-ui.gif") data-background-size="contain")
           h2 ELK
