--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -28,7 +28,7 @@ html
           br
         section(data-background-image=require("./pics/reading-other-peoples-code.png") data-background-size="contain")
           br
-        section(data-background-image=require("./pics/jira.gif") data-background-size="contain")
+        section(data-background-image=require("./pics/trello-issue.png") data-background-size="contain" data-background-color="#003F4A")
           br
         section
           h2 Implicit API
@@ -82,6 +82,9 @@ html
         section(data-background-image=require("./pics/eric-evans.jpg") data-background-size="contain" data-background-position="left" data-background-color="#000000")
           br
         section
-          p spring nest-js dry-rb dry-python
+          img(src=require("./pics/trailblazer.png") height="100" width="100" style=" padding-right: 70px;").plain
+          img(src=require("./pics/dry-rb.png") height="100" width="100" style=" padding-right: 70px;").plain
+          img(src=require("./pics/hanami.png") height="100" width="100" style=" padding-right: 70px;").plain
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png" height="100" width="100" style=" padding-right: 70px;").plain
         section(data-background-image=require("./pics/robert-martin.jpg") data-background-size="contain" data-background-position="left" data-background-color="#000000")
           br
