Add talk comments.

--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -191,5 +191,38 @@ html
           p только вот у нас в шагах всё шурупами прикручено к pusher
           p давайте ходить по всему проекту менять - на :
           p а ещё как будто этого мало поменяем полмилиона ассертов в тастах
+        section
+          p мы расширили модель данных до stream и event
+          p добавили интерфейсов для посылки сообщений
+          p пропихнули их через DI в сториз
+          p переписали asserts на stream и event
+          p реализовали новый интерфейс на ably
+        section
+          p как же мне полегчало когда 2 недели после этого мы навыкатывали новых фич
+          p в пятницу вечером опять пришёл бизнес
+          p "фронтендеры не успевают переехать на ably, откатываем на pusher, но чтоб все фичи за 2 недели были"
+          p Я говорю - 5 минут делов
+        section
+          p была проблема - внутри шагов всё привязано конкретным сторонним библиотекам
+          p решение - интерфейсы нас спасут
+          p предотвратят от протекания ограничений конкретной тулзы в бизнес логики
+        section
+          p жили не тужили
+          p но чего-то не хватало
+          p запилили интеграцию с debug toolbar потомучто сценарий падал на шаге без описания по какой бизнес логике прошёл
+        section
+          p кто ломал сиай?
+          p отычно тесты падают assertion error true is not false
+          p спасибо помог!
+          p мы напилили интеграцию с test frameworks чтобы показыват какая строчка теста чего выполняла
+        section
+          p напилили интеграцию с sentry
+        section
+          p напилим интеграцию с elk
+        section
+          p подитожим
+          p было большое приложение с месивом из хаков
+          p получили меньшее приложение с ясной картиной мира
+          p соглашения не работаят, работают инструменты
         section(data-background-image=require("./pics/robert-martin.jpg") data-background-size="contain" data-background-position="left" data-background-color="#000000")
           br
