--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,14 +1,13 @@
 {% from 'components/icons/hamburger.html' import icon as menu_icon %}
-
-{% set navbarItem = 'no-underline text-gray-900 mr-4 font-semibold align-middle border-b-2 border-solid border-transparent hover:text-black hover:border-black' %}
+{% from 'components/navbar_item.html' import navbar_item %}
 
 {% macro navbar() %}
   <nav class="container mx-auto flex items-center py-4"
        data-controller="navbar">
     <div class="w-3/5">
-      <a href="/" class="{{ navbarItem }}">
+      {% call navbar_item('/') %}
         dry-python
-      </a>
+      {% endcall %}
     </div>
     <div class="block lg:hidden">
       <button class="flex items-center px-3 py-2 border rounded text-teal-400 border-teal-500 hover:text-white hover:border-white"
@@ -19,17 +18,16 @@
     <div class="w-2/5 flex justify-end"
          data-target="navbar.menuItems">
       {% for path, label in bag('navbar').items() %}
-        <a href="{{ path|url }}" class="{{ navbarItem }}">
+        {% call navbar_item(path|url) %}
           {{ label }}
-        </a>
+        {% endcall %}
       {% endfor %}
-      <a href="https://github.com/dry-python" class="{{ navbarItem }}">
+      {% call navbar_item('https://github.com/dry-python') %}
         GitHub
-      </a>
-      {# FIXME: Move this `a` element into component. #}
-      <a href="https://drylabs.io" class="{{ navbarItem }}">
+      {% endcall %}
+      {% call navbar_item('https://drylabs.io') %}
         Drylabs
-      </a>
+      {% endcall %}
     </div>
   </nav>
 {% endmacro %}
