Proper html file names.

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,5 +1,5 @@
 {% from 'components/icons/hamburger.html' import icon as menu_icon %}
-{% from 'components/navbar_item.html' import navbar_item %}
+{% from 'components/navbar-item.html' import navbar_item %}
 
 {% macro navbar() %}
   <nav class="container mx-auto flex items-center py-4"
