Update first issue slide.

--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -64,9 +64,11 @@ html
             p eсть стартапы с django rails nestjs spring
             p там за людей уже подумали как структурировать код
             p казалось бы решение проблемы
-        section(data-background-image=require("./pics/trello-issue.png") data-background-size="contain" data-background-color="#003F4A")
-          p вот приходишь ты в такой стартап, получаешь таску
-          p идёшь в код
+        section(data-background-image=require("./pics/trello-issue.png") data-background-size="contain" data-background-color="#002B45")
+          br
+          aside.notes
+            p вот приходишь ты в такой стартап, получаешь таску
+            p идёшь в код
         section
           h2 Implicit API
           pre
