Add final slide.

--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -262,8 +262,10 @@ html
           p напилили интеграцию с sentry
         section
           p напилим интеграцию с elk
-        section
-          p подитожим
-          p было большое приложение с месивом из хаков
-          p получили меньшее приложение с ясной картиной мира
-          p соглашения не работаят, работают инструменты
+        section(data-background-image=require("./pics/keep-calm-and-ddd.png") data-background-size="contain" data-background-color="#C10C06")
+          br
+          aside.notes
+            p подитожим
+            p было большое приложение с месивом из хаков
+            p получили меньшее приложение с ясной картиной мира
+            p соглашения не работаят, работают инструменты
